tests/lean/decreasing_by.lean.expected.out
decreasing_by.lean:35:0-42:17: error: Could not find a decreasing measure.
The arguments relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
            n m
1) 35:29-43 = ?
2) 35:46-62 ? _
Please use `termination_by` to specify a decreasing measure.
decreasing_by.lean:80:13-82:3: error: unexpected token 'end'; expected '{' or tactic
decreasing_by.lean:78:0-80:13: error: unsolved goals
n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (n, snd)) Prod.instWellFoundedRelationProd).1
    { fst := n, snd := dec2 m } { fst := n, snd := m }

n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (n, snd)) Prod.instWellFoundedRelationProd).1
    { fst := dec1 n, snd := 100 } { fst := n, snd := m }
decreasing_by.lean:93:0-95:22: error: unsolved goals
case a
n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (n, snd)) Prod.instWellFoundedRelationProd).1
    { fst := n, snd := dec2 m } { fst := n, snd := m }

n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (n, snd)) Prod.instWellFoundedRelationProd).1
    { fst := dec1 n, snd := 100 } { fst := n, snd := m }
decreasing_by.lean:104:0-105:22: error: unsolved goals
case a
n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (sizeOf n, sizeOf snd)) Prod.instWellFoundedRelationProd).1
    { fst := n, snd := dec2 m } { fst := n, snd := m }

n m : Nat
⊢ (invImage (fun a => PSigma.casesOn a fun n snd => (sizeOf n, sizeOf snd)) Prod.instWellFoundedRelationProd).1
    { fst := dec1 n, snd := 100 } { fst := n, snd := m }
